# libCBDectTool

./: .gitignore  ANALYSIS.md  ARGV_OPTIMIZATION_REPORT.md  BREAKTHROUGH_SUCCESS_REPORT.md  BUILD_GUIDE.md  CMakeLists.txt  DEBUG_COMPARISON_FINAL_REPORT.md  DETAILED_ANALYSIS_REPORT.md  DETAILED_COMPARISON_REPORT.md  DETECTION_ANALYSIS_REPORT.md  FINAL_DEBUG_SUMMARY.md  MATLAB_C_COMPARISON_ANALYSIS.md  OPTIMIZATION_SUCCESS_REPORT.md  README.md  SAMPLE_ALGORITHM_OPTIMIZATION_REPORT.md  build_and_test.sh  compare_cpp_matlab.sh  debug_output4.txt  run_debug_comparison.sh
docs/: ALGORITHM_COMPARISON.md  ALGORITHM_DEEP_ANALYSIS.md  COMPLETION_SUMMARY.md  DEBUG_TOOLS_README.md  GITHUB_UPLOAD_CONFIRMATION.md  IMPROVEMENTS.md  PROJECT_FINAL_SUMMARY.md  README.md  TODAY_WORK_SUMMARY.md
include/cbdetect/: cbdetect.h  chessboard.h  chessboard_detector.h  corner.h  corner_scoring.h  correlation_scoring.h  libcbdetect_adapter.h  pipeline.h  subpixel_refinement.h  template_matching.h  zero_crossing_filter.h
logs/: cpp_debug_detailed.txt  cpp_results.txt  debug_output.txt  debug_output2.txt  debug_output3.txt  matlab_debug_detailed.txt  matlab_results.txt
python_binding/: setup.py
scripts/: README.md
src/: CMakeLists.txt  chessboard.cpp  chessboard_detector.cpp  chessboard_energy.cpp  comprehensive_validation.cpp  coordinate_analysis.cpp  corner.cpp  corner_scoring.cpp  correlation_scoring.cpp  correlation_template.cpp  debug_libcbdet_test.cpp  demo.cpp  detailed_debug_comparison.cpp  example.cc  final_optimized_test.cpp  final_perfect_detection.cpp  fine_tuned_detection.cpp  image_processing.cpp  libcbdetect_adapter.cpp  matlab_cpp_comparison.cpp  matlab_targeted_detection.cpp  non_maximum_suppression.cpp  optimized_debug_test.cpp  pipeline.cpp  pipeline_demo.cpp  region_focused_detection.cpp  simple_validation.cpp  structure_recovery.cpp  subpixel_refinement.cpp  template_matching.cpp  zero_crossing_filter.cpp
tests/: README.md  compare_pycbd_libcbdetcpp.py  comparison_summary.py  cpp_detector_wrapper.py  debug_pycbd.py  debug_pycbd_basic.py  debug_pycbd_conda.py  debug_pycbd_simple.py  libcbdetCpp_wrapper.py  libcbdet_wrapper.py  libcbdet_wrapper_v2.py  libcbdetect_python.py  pycbd_compatible_detector.py  pycbd_config.py  pycbd_example_config.py  requirements.txt  test_cpp_wrapper.py  test_libcbdet_wrapper.py  test_libcbdet_wrapper_v2.py  test_pycbd_compatible.py
